--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FLIPPY</title>
-    <link rel="stylesheet" href="style/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&amp;display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</head>
+  <body>
+    <a href="index.html">
+      <h1>Flippy</h1>
+    </a>
+    <a href="selectLearnset.html">
+      <button>Lernen</button>
+    </a>
 
-<body>
-    <h1>Flippy</h1>
-    <button>Lernen</button>
     <a href="add.html">
-        <button>+ Lernset hinzufügen</button>
+      <button>+ Lernset hinzufügen</button>
     </a>
     <button>-> Lernsetfinden</button>
-</body>
-
+  </body>
 </html>
