added more stuff i guess

--- a/add.html
+++ b/add.html
@@ -15,9 +15,11 @@
     <a href="index.html">
       <h1>Flippy</h1>
     </a>
-    <p>Name des Lernsets:</p>
-    <input id="inp" type="text" autocomplete="off" />
-    <button id="add" type="submit">+ Lernset hinzufügen</button>
+    <div id="lernSetWrapper">
+      <p>Name des Lernsets:</p>
+      <input id="inp" type="text" autocomplete="off" />
+      <button id="add" type="submit">+ Lernset hinzufügen</button>
+    </div>
     <script>
       const addButton = document.getElementById("add");
       const input = document.getElementById("inp");
