--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
       <h1>Flippy</h1>
     </a>
     <a href="selectLearnset.html">
-      <button>Lernen</button>
+      <button>-> Lernset lernen</button>
     </a>
 
+    <a href="editLearnset.html">
+      <button>~ Lernset bearbeiten</button>
+    </a>
     <a href="add.html">
       <button>+ Lernset hinzufügen</button>
     </a>
-    <button>-> Lernsetfinden</button>
+    <button>-O Lernsetfinden</button>
   </body>
 </html>
