--- a/editLearnset.html
+++ b/editLearnset.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&amp;display=swap"
       rel="stylesheet"
     />
-    <title>- select Learnset</title>
+    <title>~ select to edit Learnset</title>
   </head>
   <body>
     <a href="index.html">
@@ -26,7 +26,7 @@
         lernSetWrapper.appendChild(lernSetElem);
         lernSetElem.addEventListener("click", () => {
           console.log("outch");
-          window.location.assign(`./learn.html?lernset=${lernSet}`);
+          window.location.assign(`./edit.html?lernset=${lernSet}`);
         });
       });
     </script>
